# pyAltiForce

./: .gitignore  AltiForce.py  README.md  pyAltiForce.py  pyproject.toml  tox.ini
.github/workflows/: lint_test.yml
pyaltiforce/: altiforce.py  helpers.py
