[tool.poetry]
name = "pyAltiForce"
version = "1.1.0"
description = "Python Parsing for AltiForce GoPro Backpack CSVs."
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/sco1/"
repository = "https://github.com/sco1/pyaltiforce"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
packages = [{include = "pyaltiforce"},]

[tool.poetry.scripts]
altiforce = "pyaltiforce.altiforce:cli"

[tool.poetry.dependencies]
python = "^3.8, <3.11"
matplotlib = "^3.4"
numpy = "^1.21"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
bump2version = "^1.0"
flake8 = "^3.9"
flake8-annotations = "^2.6"
flake8-bugbear = "^21.9"
flake8-docstrings = "^1.6"
flake8-fixme = "^1.1"
flake8-import-order = "^0.18"
flake8-tidy-imports = "^4.4"
isort = "^5.9"
mypy = "^0.910"
pep8-naming = "^0.12"
pre-commit = "^2.15"
pytest = "^6.2"
pytest-check = "^1.0"
pytest-cov = "^2.12"
tox = "^3.24"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "pyaltiforce,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
